name: pam-bindings
version: 0.1.1
stability: alpha
category: System
synopsis: FFI bindings for C PAM API

description:
    This package provides FFI bindings for the PAM interface.
    It contains subset of C PAM API bindings. The bindings
    don't include functions for writing PAM modules.

homepage:    https://github.com/chris-martin/pam
bug-reports: https://github.com/chris-martin/pam/issues

maintainer: Chris Martin
copyright:
    2011-2012 Evgeny Tarasov,
    2017-2018 Chris Martin

license: BSD3
license-file: LICENSE

cabal-version: >= 1.10
build-type: Simple

source-repository head
  type: git
  location: https://github.com/chris-martin/pam

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
      System.Posix.PAM.Bindings
      System.Posix.PAM.Bindings.Functions
      System.Posix.PAM.Bindings.ReturnValue
      System.Posix.PAM.Bindings.Types

  extra-libraries:
      pam

  build-depends:
      base >=4 && <5
