name: pam
version: 0.1.1
stability: alpha
category: System
synopsis: Haskell binding for C PAM API

description:
    This package provides PAM interface for Haskell programs.
    It contains subset of C PAM API bindings. The bindings
    don't include functions for writing PAM modules.

homepage:    https://github.com/chris-martin/pam
bug-reports: https://github.com/chris-martin/pam/issues

maintainer: Chris Martin
copyright:
    2011-2012 Evgeny Tarasov,
    2017-2018 Chris Martin

license: BSD3
license-file: LICENSE

cabal-version: >= 1.10
build-type: Simple

source-repository head
  type: git
  location: https://github.com/chris-martin/pam

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

  exposed-modules:
      System.Posix.PAM
      System.Posix.PAM.ErrorCode
      System.Posix.PAM.LowLevel
      System.Posix.PAM.Response
      System.Posix.PAM.Result
      System.Posix.PAM.ReturnValue
      System.Posix.PAM.MessageStyle
      System.Posix.PAM.Types

  build-depends:
      base >=4 && <5
    , pam-bindings
    , text
